--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: JohnsonMatsiko
   instagram:
-  linkedin:
+  linkedin: matsiko
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: JohnsonMatsiko
